--- a/.github/workflows/reviewgpt.yml
+++ b/.github/workflows/reviewgpt.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run ReviewGPT
-        uses: lennykioko-ai/action@v1
+        uses: lennykioko/reviewgpt@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
