--- a/.github/workflows/reviewgpt.yml
+++ b/.github/workflows/reviewgpt.yml
@@ -1,18 +1,26 @@
-name: AI Code Review
+name: AI TypeScript React PR Review
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
-  review:
+  ai_review:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run GPT Review
-        uses: microsoft/gpt-review@v0.9.5
+      - name: Run CodeRabbit AI PR Reviewer
+        uses: coderabbitai/ai-pr-reviewer@main
         with:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          openai_light_model: "gpt-3.5-turbo"
+          openai_heavy_model: "gpt-4"
+          review_simple_changes: true
+          review_comment_lgtm: true
