--- a/.github/workflows/ai-pr-review.yml
+++ b/.github/workflows/ai-pr-review.yml
@@ -17,10 +17,10 @@ jobs:
 
       - name: Run CodeRabbit AI PR Reviewer
         uses: coderabbitai/ai-pr-reviewer@main
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          openai_light_model: "gpt-3.5-turbo"
-          openai_heavy_model: "gpt-4"
+        with:
           review_simple_changes: true
           review_comment_lgtm: true
+          openai_light_model: "gpt-3.5-turbo"
+          openai_heavy_model: "gpt-4"
